<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
>
 <ScrollView
  android:id="@+id/ScrollView01"
  android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
 <TextView
  android:id="@+id/result_tv"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/hello_tag" android:textSize="20sp"></TextView>

 </ScrollView>
 <LinearLayout
  android:layout_width="fill_parent"
  android:orientation="horizontal"
 android:layout_height="fill_parent" android:layout_weight="10">
  <Button android:layout_weight="1" android:layout_width="fill_parent" android:text="@string/read_label" android:layout_height="wrap_content" android:id="@+id/btn_read"></Button><Button android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/history_label" android:id="@+id/brn_hitory"></Button><Button
   android:layout_weight="1"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:text="@string/inout_label" android:id="@+id/btn_inout"></Button>
 

</LinearLayout>

</LinearLayout>
